2014-09-22  Julien Bect  <julien.bect@supelec.fr>

	Make stk_config_rmpath work on Windows systems.

	* config/stk_config_rmpath.m: Make stk_config_rmpath work on
	Windows systems (pathsep must be used instead of ':' since ':' is
	not the path separator for Windows...).

2014-09-20  Julien Bect  <julien.bect@supelec.fr>

	Provide a replacement for missing isrow.

	* misc/mole/isrow/isrow.m: Replacement for isrow.
	* config/stk_config_mole.m: Add our isrow function to the path if
	necessary (e.g., Matlab R2007a).

	Fix a tiny bug in stk_param_estim.

	* paramestim/stk_param_estim.m: Use strcmpi instead of strcmp to
	compare err.identifier to 'matlab:optimset:invalidparamname' on
	line 167. I wonder if this line has ever worked properly... (only
	affects old releases of Matlab, e.g.,R2007a).

	Don't use ~ to ignore arguments.

	* admin/build_tools/build_octpkg.m: Don't use ~ to ignore arguments.
	* utils/stk_generate_samplepaths.m: Don't use ~ to ignore arguments.

2014-09-15  Julien Bect  <julien.bect@supelec.fr>

	stk_param_relik.m: Optimize the case of simple kriging.

	* paramestim/stk_param_relik.m: Optimize the case of simple kriging.

2014-09-09  Paul Feliot  <paul.feliot@irt-systemx.fr>

	doc: Update help text for several functions.

	* covfcs/stk_materncov32_aniso.m: Update help text.
	* covfcs/stk_materncov32_iso.m: Update help text.
	* covfcs/stk_materncov52_aniso.m: Update help text.
	* covfcs/stk_materncov52_iso.m: Update help text.
	* covfcs/stk_materncov_aniso.m: Update help text.
	* covfcs/stk_materncov_iso.m: Update help text.
	* paramestim/stk_param_init.m: Update help text.

2014-09-02  Julien Bect  <julien.bect@supelec.fr>

	Rename LICENSE to COPYING.

	* LICENSE: Renamed to COPYING.
	* COPYING: Formerly known as LICENSE.
	* README: Update reference to LICENSE.
	* admin/build_tools/build_forgedoc.m: No more need to rename.
	* admin/build_tools/build_octpkg.m: No more need to rename.